--- a/src/scss/components/_table-of-contents.scss
+++ b/src/scss/components/_table-of-contents.scss
@@ -52,6 +52,10 @@
       &:hover {
         background-size: 100% 1px;
       }
+
+      @media (prefers-reduced-motion: reduce) {
+        transition-duration: 0s;
+      }
     }
   }
 }
