--- a/src/scss/components/_home-nav.scss
+++ b/src/scss/components/_home-nav.scss
@@ -38,6 +38,8 @@
       font-size: 1.25rem;
     }
 
+    @include with-focus-outline;
+
     &-title {
       position: relative;
       display: inline-block;
