🆎 - Fix apostrophes and out of date README

--- a/src/about.njk
+++ b/src/about.njk
@@ -25,7 +25,7 @@
     </figure>
     <section class="card about-layout__section about-layout__who">
         <h2>Who</h2>
-        <p>I’m Henry Desroches; I’m a front-of-the-front-end developer && design engineer  && creative technologist && UX engineer && web  developer from Denver, Colorado. I got my start Coding For The ‘Net in  2004, using Dreamweaver to make websites for school projects. I’ve worked professionally on the web since 2015, mostly at creative web agencies, though I’ve done some time with some incredible teams at FAANG companies and other large corporations.</p>
+        <p>I’m Henry Desroches; I’m a front-of-the-front-end developer && design engineer  && creative technologist && UX engineer && web  developer from Denver, Colorado. I got my start Coding For The ’Net in  2004, using Dreamweaver to make websites for school projects. I’ve worked professionally on the web since 2015, mostly at creative web agencies, though I’ve done some time with some incredible teams at FAANG companies and other large corporations.</p>
         <nav class="about-links">
             <a class="with-arrow" href="/now">Now</a>
             <a class="with-arrow" href="#speaking">Speaking</a>
