🦶 - Disclaimer in the ol' footer, too many DMs about this one bro

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -38,6 +38,7 @@
             </section>
         </nav>
         <div class="footer__colophon">
+            <!-- Made you look, you massive dork you 😘 -->
             <span>`© ${new Date().getCurrentYear()}`</span>
             <span>made with :emoji: in Denver, Colorado</span>
         </div>
