--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -56,6 +56,7 @@
     <link rel="microsub" href="https://aperture.p3k.io/microsub/816">
 
     {% if page.url === '/' %}
+    <link rel="preload" href="/img/gargoyle-with-texture-1000w.avif" as="image" type="image/avif" crossorigin>
         <link rel="preload" href="/fonts/manuka-black.woff2" as="font" type="font/woff2" crossorigin />
         <link rel="preload" href="/fonts/subset-LouizeDisplay.woff2" as="font" type="font/woff2" crossorigin />
         <link rel="preload" href="/fonts/subset-LouizeDisplay-Italic.woff2" as="font" type="font/woff2" crossorigin />
