--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,8 @@
 @use 'components/embed';
 @use 'components/recognition-chart';
 @use 'components/grid-overlay';
+@use 'components/recent-reading';
+@use 'components/styled-rows';
 
 @use 'pages/home';
 @use 'pages/work';
