--- a/src/writing.njk
+++ b/src/writing.njk
@@ -36,7 +36,7 @@
     </div>
 </header>
 
-{% include 'recent-reading.njk' %}
+{% include 'recent-reading-block.njk' %}
 
 <section class="writing-section" id="blog">
     <div class="container">
