📝 - Notes show TOC and hero image if enabled, add json schema in vscode note

--- a/src/_includes/layouts/_article.njk
+++ b/src/_includes/layouts/_article.njk
@@ -37,6 +37,8 @@ bodyClass: "article"
     {% if hasToc %}
         {% set toc = content | getTOC %}
         {% include 'table-of-contents.njk' %}
+    {% endif %}
+    {% if hasHero %}
         <div class="article-header__graphic-wrapper">
             {% if useHero %}
             <img alt="" {% if customThreshold %}data-threshold="{{ customThreshold }}"{% endif %} src="{{ heroImage }}" class="article-header__image">
