--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -32,7 +32,11 @@
 
     <meta property="og:url" content="https://henry.codes">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Henry From Online">
+    {% if meta.title %}
+    <meta property="og:title" content="{{ meta.title }}">
+    {% else %}
+    <meta property="og:title" content="{{ pageTitle }}">
+    {% endif %}
     {% if meta.description %}
     <meta property="og:description" content="{{ meta.description }}">
     {% else %}
