--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -16,18 +16,18 @@ html {
 }
 
 body {
-  --color-text: #2a2722;
-  --color-background: #fafafa;
-  --color-text-mid: #666;
-  --color-border-mid: #bdbdbd;
-  --color-border-light: #eee;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Neue Montreal', sans-serif;
   margin: 0;
   color: var(--color-text);
   background-color: var(--color-background);
+
+  --color-text: #2a2722;
+  --color-background: #fafafa;
+  --color-text-mid: #666;
+  --color-border-mid: #bdbdbd;
+  --color-border-light: #eee;
 }
 
 a {
@@ -57,9 +57,9 @@ a:not([class]) {
 }
 
 h1:not([class]) {
-  font-weight: normal;
   font-family: $font-serif-display;
   font-size: 3rem;
+  font-weight: normal;
 }
 
 ul,
@@ -88,7 +88,7 @@ pre {
 
 :not(pre) > code {
   position: relative;
-  background-color: var(--color-border-light);
+  background-color: $color-border-light;
 
   &::before {
     position: absolute;
@@ -96,7 +96,24 @@ pre {
     inset: -0.5ex;
     content: '';
     border-radius: 4px;
-    background-color: var(--color-border-light);
+    background-color: $color-border-light;
+  }
+}
+
+kbd {
+  position: relative;
+  display: inline-block;
+  margin-inline: 0.5ex;
+  padding-inline: 0.25ex;
+
+  &::before {
+    position: absolute;
+    z-index: -1;
+    inset: -0.25ex -0.5ex;
+    content: '';
+    border: 1px solid $color-border-light;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px $color-border-light;
   }
 }
 
