👠 - Okay so the footer date isn’t as funny as I thought

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -39,7 +39,7 @@
         </nav>
         <div class="footer__colophon">
             <!-- Made you look, you massive dork you 😘 -->
-            <span>`© ${new Date().getCurrentYear()}`</span>
+            <a class="unstyled-link" href="/writing/i-know-about-the-date-in-the-footer/">`© ${new Date().getCurrentYear()}`</a>
             <span>made with :emoji: in Denver, Colorado</span>
         </div>
         <div class="footer__graphic">
