--- a/src/scss/base/_utils.scss
+++ b/src/scss/base/_utils.scss
@@ -58,3 +58,12 @@ img.with-transparent-bg {
 .with-sans {
   font-family: $font-sans;
 }
+
+.with-flowed-children {
+  display: grid;
+  row-gap: 2lh;
+}
+
+.unstyled-link {
+  text-decoration: none;
+}
