--- a/src/_includes/article-block.njk
+++ b/src/_includes/article-block.njk
@@ -23,7 +23,7 @@
         <div>
             <dt class="visually-hidden">Last updated</dt>
             <dd>
-                <date>Last updated {{ (article.data.publishDate or article.date) | humanReadableDate }}</date>
+                <time>Last updated {{ (article.data.publishDate or article.date) | humanReadableDate }}</time>
             </dd>
         </div>
     </dl>
