--- a/src/_includes/case-study-block.njk
+++ b/src/_includes/case-study-block.njk
@@ -22,7 +22,7 @@
         <div>
             <dt class="visually-hidden">Duration</dt>
             <dd>
-                <date>{{ caseStudy.data.duration }}</date>
+                <time>{{ caseStudy.data.duration }}</time>
             </dd>
         </div>
     </dl>
