⚙️ - Prevent duplicated articles on writing page

--- a/src/links.njk
+++ b/src/links.njk
@@ -11,7 +11,7 @@
 <header class="page-header page-header--without-border page-header--compact">
     <div class="page-header__inner">
         <h1 class="page-header__title">Links</h1>
-        <p class="page-header__description"><em>We were once Internet Explorers.</em> Read more about the importance of links pages from <a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">melonking</a> and from <a href="https://art.teleportacia.org/observation/vernacular/links.html">olia lialina</a>.</p>
+        <p class="page-header__description"><em>We were once Internet Explorers.</em> Read more about the importance of links pages from <a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">MelonKing</a> and from <a href="https://art.teleportacia.org/observation/vernacular/links.html">Olia Lialina</a>.</p>
     </div>
 </header>
 <div class="links-page">
