🔘 - Test click-and-hold spinner button

--- a/src/links.njk
+++ b/src/links.njk
@@ -30,8 +30,13 @@
                 </li>
             {% endfor %}
         </ul>
+        <button class="links-page__spinner">
+            ↻
+            <span class="visually-hidden">Spin the wheel</span>
+        </button>
         <div class="links-page-background">
-            {% include 'graphics/crown.svg' %}
+            {# {% include 'graphics/crown.svg' %} #}
+            {% include 'graphics/chains.svg' %}
         </div>
     </div>
 </div>
