⚙️ - Full URL in templates og:url

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,7 +30,7 @@
     <meta name="theme-color" content="#2a2722" />
     <meta name="generator" content="eleventy">
 
-    <meta property="og:url" content="https://henry.codes">
+    <meta property="og:url" content="https://henry.codes{{ page.url }}">
     <meta property="og:type" content="website">
     {% if meta.title %}
     <meta property="og:title" content="{{ meta.title }}">
