--- a/src/_includes/layouts/_article.njk
+++ b/src/_includes/layouts/_article.njk
@@ -19,7 +19,7 @@ bodyClass: "article"
             <div>
                 <dt>Last Updated</dt>
                 <dd>
-                    {{ publishDate | monthYearDate }}
+                    {{ (publishDate or page.date) | monthYearDate }}
                 </dd>
             </div>
             <div class="article-header__topics" webc:if="topics">
