✉️ - Add email to indieauth options

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,6 +24,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/meta/favicon-16x16.png" />
     <link rel="me" href="https://front-end.social/@henry" />
     <link rel="me" href="https://github.com/xdesro">
+    <link rel="me href="mailto:yo@henry.codes">
     <link rel="manifest" href="/meta/site.webmanifest" />
     <link rel="mask-icon" href="/meta/safari-pinned-tab.svg" color="#000000" />
     <meta name="msapplication-TileColor" content="#2a2722" />
@@ -73,7 +74,7 @@
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/style.css">
 
-   
+
 </head>
 
 <body class="no-js {% if bodyClass %}{{ bodyClass }}{% endif %}">
