✍️ - Add micropub endpoint and basic micropub function

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -52,6 +52,7 @@
     <!-- Indieweb -->
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
+    <link rel="micropub" href="https://henry.codes/.netlify/functions/micropub">
 
     <!-- Webmentions -->
     <link rel="webmention" href="https://webmention.io/henry.codes/webmention" />
