--- a/src/micro.njk
+++ b/src/micro.njk
@@ -49,12 +49,13 @@
                 clip-rule="evenodd" />
         </svg>
         {% for post in collections['micro'] | sortedByPublishDate %}
-        <article class="post post--by-self">
-            <div class="post__content">
+        <article class="h-entry post post--by-self">
+            {% if title %}<h1 class="p-name post__title">{{ title }}</h1>{% endif %}
+            <div class="e-content post__content">
                 <p>{{ post.data.text }}</p>
             </div>
             <footer class="post__footer">
-                <time class="post__date">{{ post.data.date | humanReadableDateTime }}</time>
+                <time class="dt-published post__date">{{ post.data.date | humanReadableDateTime }}</time>
                 <div class="post__links">
                     {% if post.data.blueskyUrl %}
                     <a class="post__link" href="{{ post.data.blueskyUrl }}">
